--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="account_n_management">Account \n management</string>
     <string name="login_in_a_safe_way">login in a safe way</string>
     <string name="go">go</string>
+    <string name="welcome">Welcome</string>
 </resources>
