--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,14 @@
     <string name="go">go</string>
     <string name="welcome">Welcome</string>
     <string name="skip">skip</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="login">LOGIN</string>
+    <string name="email_id">Email Id</string>
+    <string name="enter_your_email_here">enter your email here</string>
+    <string name="forgot_password">FORGOT PASSWORD</string>
+    <string name="password">password</string>
+    <string name="i_don_t_have_an_account">I DON\'T HAVE AN ACCOUNT</string>
+    <string name="register">REGISTER</string>
+    <string name="full_name">Full name</string>
+    <string name="mobile_no">Mobile No.</string>
 </resources>
