--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -19,4 +19,13 @@
     <string name="register">REGISTER</string>
     <string name="full_name">Full name</string>
     <string name="mobile_no">Mobile No.</string>
+    <string name="welcome_full_name">Welcome full name</string>
+    <string name="_1_9999_9999_99">1-9999-9999-99</string>
+    <string name="example_gmail_com">example@gmail.com</string>
+    <string name="home">Home</string>
+    <string name="cart">Cart</string>
+    <string name="orders">Orders</string>
+    <string name="profile">Profile</string>
+    <string name="logout">Logout</string>
+    <string name="super_cart">SUPER CART</string>
 </resources>
