--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="profile">Profile</string>
     <string name="logout">Logout</string>
     <string name="super_cart">SUPER CART</string>
+    <string name="category_item">Category item</string>
 </resources>
