add navigating to subcategory fragment from category fragment. adding backstack logic for the fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,5 @@
     <string name="logout">Logout</string>
     <string name="super_cart">SUPER CART</string>
     <string name="category_item">Category item</string>
+    <string name="sub_category">sub category</string>
 </resources>
