make toolbar changable according to different screens

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,4 +34,5 @@
     <string name="_200">$ 200</string>
     <string name="product_descriptions">product descriptions :********</string>
     <string name="add_to_cart">ADD TO CART</string>
+    <string name="category_name">Category name</string>
 </resources>
