--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,4 +35,8 @@
     <string name="product_descriptions">product descriptions :********</string>
     <string name="add_to_cart">ADD TO CART</string>
     <string name="category_name">Category name</string>
+    <string name="specifications">Specifications</string>
+    <string name="specification_name">specification name</string>
+    <string name="specification_description">specification description</string>
+    <string name="user_reviews">User Reviews</string>
 </resources>
