--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,6 @@
     <string name="specification_name">specification name</string>
     <string name="specification_description">specification description</string>
     <string name="user_reviews">User Reviews</string>
+    <string name="user_name">user name</string>
+    <string name="review_title">Review title</string>
 </resources>
