--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -46,4 +46,8 @@
     <string name="plus">+</string>
     <string name="minus">-</string>
     <string name="_1">1</string>
+    <string name="unit_price">Unit Price</string>
+    <string name="quantity">Quantity</string>
+    <string name="amount">Amount</string>
+    <string name="next">next</string>
 </resources>
