--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,4 +57,6 @@
     <string name="address_title">Address Title</string>
     <string name="cancel">cancel</string>
     <string name="save">save</string>
+    <string name="payment_description">payment description</string>
+    <string name="select_payment_option">Select Payment Option</string>
 </resources>
